<resources>
    <string name="app_name">Darts Counter</string>
    <string name="round">Round</string>
    <string name="average">Average</string>
    <string name="submit">Submit</string>
    <string name="zero">0</string>
    <string name="bust">Bust</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="player2">Player 2</string>
    <string name="player1">Player 1</string>
    <string name="winner">Winner</string>
    <string name="fiveZeroOne">501</string>
    <string name="threeZeroOne">301</string>
    <string name="oneZeroOne">101</string>
    <string name="_501">501</string>
    <string name="scores">Scores</string>
    <string name="checkOut">Checkout</string>
</resources>
